force-app/main/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Actual_Time_Taken__c</fullName>
        <label>Actual Time Taken</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AssignedBy__c</fullName>
        <label>Assigned By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aayesha Davids</fullName>
                </value>
                <value>
                    <fullName>Abdi Adan</fullName>
                </value>
                <value>
                    <fullName>Adrian Seligman</fullName>
                </value>
                <value>
                    <fullName>Adri Fourie</fullName>
                </value>
                <value>
                    <fullName>Agi Hurst</fullName>
                </value>
                <value>
                    <fullName>Agi Luty</fullName>
                </value>
                <value>
                    <fullName>Ailsa Stitt</fullName>
                </value>
                <value>
                    <fullName>Aimee Murray</fullName>
                </value>
                <value>
                    <fullName>Alan Barber</fullName>
                </value>
                <value>
                    <fullName>Alexandra Cary</fullName>
                </value>
                <value>
                    <fullName>Alex Davis</fullName>
                </value>
                <value>
                    <fullName>Alex Mathieson</fullName>
                </value>
                <value>
                    <fullName>Alison Fishlock</fullName>
                </value>
                <value>
                    <fullName>Alison Hollamby</fullName>
                </value>
                <value>
                    <fullName>Alvin Meyer</fullName>
                </value>
                <value>
                    <fullName>Aman Zadran</fullName>
                </value>
                <value>
                    <fullName>Andrew Geake</fullName>
                </value>
                <value>
                    <fullName>Andrew Goulding</fullName>
                </value>
                <value>
                    <fullName>Andrew Knight</fullName>
                </value>
                <value>
                    <fullName>Andrew Scrimshaw</fullName>
                </value>
                <value>
                    <fullName>Andrew Spence</fullName>
                </value>
                <value>
                    <fullName>Angela Miatt</fullName>
                </value>
                <value>
                    <fullName>Angela Simcock</fullName>
                </value>
                <value>
                    <fullName>Anita Zechmann</fullName>
                </value>
                <value>
                    <fullName>Anna Perhage</fullName>
                </value>
                <value>
                    <fullName>Anna Stepien-Potega</fullName>
                </value>
                <value>
                    <fullName>Anna Wittrup</fullName>
                </value>
                <value>
                    <fullName>Ashley Wheaton</fullName>
                </value>
                <value>
                    <fullName>Audrey Fays</fullName>
                </value>
                <value>
                    <fullName>Avinash Jabbal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_To_Name__c</fullName>
        <label>Assigned To Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_s__c</fullName>
        <label>Attendee(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aayushi Jain</fullName>
                </value>
                <value>
                    <fullName>Abdul Sami</fullName>
                </value>
                <value>
                    <fullName>Abhimanyu Sangwan</fullName>
                </value>
                <value>
                    <fullName>Adam Boyadjis</fullName>
                </value>
                <value>
                    <fullName>Adam Wang</fullName>
                </value>
                <value>
                    <fullName>Ada Qian</fullName>
                </value>
                <value>
                    <fullName>Aditi Singh</fullName>
                </value>
                <value>
                    <fullName>Aditya Khandelwal</fullName>
                </value>
                <value>
                    <fullName>Agi Hurst</fullName>
                </value>
                <value>
                    <fullName>Ahmad Rashid</fullName>
                </value>
                <value>
                    <fullName>Ahmed Soliman</fullName>
                </value>
                <value>
                    <fullName>Ailsa Thomas</fullName>
                </value>
                <value>
                    <fullName>Aina Bawa</fullName>
                </value>
                <value>
                    <fullName>Aino-Maaria Peltomaa</fullName>
                </value>
                <value>
                    <fullName>AJ Elgert</fullName>
                </value>
                <value>
                    <fullName>Ajit Singh</fullName>
                </value>
                <value>
                    <fullName>Akanksha Singh</fullName>
                </value>
                <value>
                    <fullName>Akshay Sharma</fullName>
                </value>
                <value>
                    <fullName>Alanna Harris</fullName>
                </value>
                <value>
                    <fullName>Alessandra Kren</fullName>
                </value>
                <value>
                    <fullName>Alessandro Groggia</fullName>
                </value>
                <value>
                    <fullName>Alexander Perkins-Monney</fullName>
                </value>
                <value>
                    <fullName>Alexander Ratzel</fullName>
                </value>
                <value>
                    <fullName>Alexandre Métivier</fullName>
                </value>
                <value>
                    <fullName>Alex Davis</fullName>
                </value>
                <value>
                    <fullName>Alice Fagan</fullName>
                </value>
                <value>
                    <fullName>Amanda Kondrotas</fullName>
                </value>
                <value>
                    <fullName>Amit Joseph</fullName>
                </value>
                <value>
                    <fullName>Amit Kumar Sharma</fullName>
                </value>
                <value>
                    <fullName>Andrea Hansen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Disposition__c</fullName>
        <label>Call Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Left Voicemail</fullName>
                </value>
                <value>
                    <fullName>Connected</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Central_PS_Status__c</fullName>
        <label>Central PS Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Provisional</fullName>
                </value>
                <value>
                    <fullName>Speculative</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Holiday</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientInterest1__c</fullName>
        <description>changed from Client Interest 1, 2 and 3 and to a multi value picklist
14/6/06 added SHL Verify, Dependability &amp;Safety Measure, replaced both MQ slections with Employee Motivation Report and Motivation Course</description>
        <label>Client Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>360 Course</fullName>
                </value>
                <value>
                    <fullName>A&amp;DC Course - Ass. &amp; Dev. Centre Design</fullName>
                </value>
                <value>
                    <fullName>Ability Tests - General</fullName>
                </value>
                <value>
                    <fullName>Account Change</fullName>
                </value>
                <value>
                    <fullName>AMT - Advanced Managerial Tests</fullName>
                </value>
                <value>
                    <fullName>Assessor Training</fullName>
                </value>
                <value>
                    <fullName>ATS - Applied Technology Series</fullName>
                </value>
                <value>
                    <fullName>Brainstorm</fullName>
                </value>
                <value>
                    <fullName>Bureau Offline</fullName>
                </value>
                <value>
                    <fullName>Bureau On-line</fullName>
                </value>
                <value>
                    <fullName>Bureau Projects</fullName>
                </value>
                <value>
                    <fullName>Career Pathfinder - Quickscan / Indepth</fullName>
                </value>
                <value>
                    <fullName>CBI Course - Competency Based Interview</fullName>
                </value>
                <value>
                    <fullName>CCAS - Customer Contact Aptitude Series</fullName>
                </value>
                <value>
                    <fullName>CCQ - Corporate Culture Questionnaire</fullName>
                </value>
                <value>
                    <fullName>CCSQ - Customer Contact Styles Quest.</fullName>
                </value>
                <value>
                    <fullName>Client Call Back</fullName>
                </value>
                <value>
                    <fullName>COMPD</fullName>
                </value>
                <value>
                    <fullName>Consultancy Enquiry</fullName>
                </value>
                <value>
                    <fullName>Consultancy Skills Course</fullName>
                </value>
                <value>
                    <fullName>Course Feedback</fullName>
                </value>
                <value>
                    <fullName>CRTB - Critical Reasoning Test Battery</fullName>
                </value>
                <value>
                    <fullName>Dependability &amp; Safety Measure</fullName>
                </value>
                <value>
                    <fullName>Duty Consultant Referral</fullName>
                </value>
                <value>
                    <fullName>Equal Opps General</fullName>
                </value>
                <value>
                    <fullName>Equal Opps Special Format</fullName>
                </value>
                <value>
                    <fullName>Exemptions</fullName>
                </value>
                <value>
                    <fullName>Fastrack</fullName>
                </value>
                <value>
                    <fullName>Findex - Finger Dexterity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delegate_Billing_Account_Dnumber__c</fullName>
        <label>Delegate/Billing Account Dnumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegate_Billing_Account_Name__c</fullName>
        <label>Delegate/Billing Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstimatedDurationInMinutes__c</fullName>
        <description>This field is meant for entering the estimated task duration in minutes.</description>
        <label>Estimated Duration In Minutes</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Category__c</fullName>
        <description>Category of the event</description>
        <inlineHelpText>Indicates the detailed type of Sales, Customer Service or Professional Services interaction had.</inlineHelpText>
        <label>Event Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Event_Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>360 DSPS</fullName>
                </value>
                <value>
                    <fullName>360 MFS</fullName>
                </value>
                <value>
                    <fullName>Account Plan Reviewed</fullName>
                    <label>Account Plan Review</label>
                </value>
                <value>
                    <fullName>Account Review</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>BOS</fullName>
                </value>
                <value>
                    <fullName>Branding</fullName>
                </value>
                <value>
                    <fullName>Business Review</fullName>
                </value>
                <value>
                    <fullName>Reboost/Renewal Discussion</fullName>
                    <label>Confirm Verbal Agreement</label>
                </value>
                <value>
                    <fullName>Consultancy - Confirmed</fullName>
                </value>
                <value>
                    <fullName>Consultancy - Freebie</fullName>
                </value>
                <value>
                    <fullName>Consultancy - Provisional</fullName>
                </value>
                <value>
                    <fullName>Contract Review - InfoSec</fullName>
                </value>
                <value>
                    <fullName>Contract Review - Legal</fullName>
                </value>
                <value>
                    <fullName>Contract Review - Procurement</fullName>
                </value>
                <value>
                    <fullName>Custom Norms</fullName>
                </value>
                <value>
                    <fullName>Custom Report Bespoke</fullName>
                </value>
                <value>
                    <fullName>Custom Report Type 1</fullName>
                </value>
                <value>
                    <fullName>Custom Report Type 2</fullName>
                </value>
                <value>
                    <fullName>Custom Report Type 3</fullName>
                </value>
                <value>
                    <fullName>Duty Consultant</fullName>
                </value>
                <value>
                    <fullName>Executive Business Review</fullName>
                </value>
                <value>
                    <fullName>Extract</fullName>
                </value>
                <value>
                    <fullName>First sales introduction</fullName>
                </value>
                <value>
                    <fullName>Follow-up interaction</fullName>
                </value>
                <value>
                    <fullName>Holiday</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Internal Projects</fullName>
                </value>
                <value>
                    <fullName>JCS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <inlineHelpText>An event is a significant 2-way interaction with a customer or potential customer. Choose the type that best fits.</inlineHelpText>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Central PS</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hours_work__c</fullName>
        <label>Hours work</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track progress on Strategy</description>
        <label>Is Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>In person meeting</fullName>
                </value>
                <value>
                    <fullName>Virtual meeting</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NBB_CrossSell_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Events related to (NBB and Cross sell) opportunity type Opportunities</description>
        <label>NBB_CrossSell_Events?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <description>The stage of the opportunity which is updated automatically when the event is created and then locked so it cannot change either manually in the event or via the stage being updated in the opportunity.</description>
        <label>Opportunity Stage (do not use)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_email_to_assignee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send email to assignee when checked.</description>
        <inlineHelpText>Checking the box will send an email to the user to whom the event is assigned</inlineHelpText>
        <label>Send email to assignee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_Category__c</fullName>
        <label>Task Category</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_End_Time__c</fullName>
        <label>Task End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Task_Start_Time__c</fullName>
        <description>When user click on Task start button. this field will be populated with the current time</description>
        <label>Task Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UnScheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UnScheduled?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>